--- a/simplestorage.html
+++ b/simplestorage.html
@@ -15,7 +15,7 @@
 <h3>Simple Storage dApp 예제</h3>
 <ul>
   <li>컨트랙트 주소: <span id="contractAddr"></span></li>
-  <li>내 어카운트 주소: <span id="accountAddr"></span></li>>
+  <li>내 어카운트 주소: <span id="accountAddr"></span></li>
   <li>컨트랙트에 저장된 값: <span id="storedData"></span>
     <button onclick="getValue()">새로고침</button> (현재블록: <span id="lastBlock"></span>)</li>
   <li><input id="newValue" type="text"><button onclick="setValue()">새 값으로 저장하기</button>
@@ -72,14 +72,14 @@ function getLink(addr) {
 function getValue() {
   simpleStorage.get(function(e,r) {
     document.getElementById('storedData').innerHTML = r.toNumber();
-  })
+  });
   web3.eth.getBlockNumber(function(e,r) {
-    document.getElementByID('lastBlock').innerHTML = r;
-  })
+    document.getElementById('lastBlock').innerHTML = r;
+  });
 }
 
 function setValue() {
-  var NewValue = document.getElementById('newValue');
+  var newValue = document.getElementById('newValue').value;
   var txid;
   simpleStorage.set(newValue, function(e,r){
     document.getElementById('result').innerHTML = 'Transaction id:' + r + '<span id="pending" style="color:red;">(Pending)</span>';
